# knowledge-sharing

./: .gitignore  19. Streaming 101.md  22. Microservices Design.md  23. Video Streaming.md  28. Why Kafka is Fast.md  30. Apache Arrow Study.md  31. DDIA-Encoding and Evolution.md  33. Container Building Blocks.md  36. Data Warehouse.md  37. Data Lake.md  42. Scientific Computing.md  43. DDIA-Partitioning.md  47. DDIA-Consensus.md  48. DDIA-Replication.md  53. DDIA-Data Models and Query Languages.md  54. Intro to AI.md  56. DDS-Single-node Patterns.md  58. DDS-Batch Computational Patterns.md  59. FSS-Distributed Systems Architectures.md  60. FSS-Distributed Systems Essentials.md  67. Architectural Pattern.md  69. Autosharding.md  70. Retrieval Augmented Generation(RAG).md  71. SDI - Scale.md  72. SDI - Estimate.md  73. SDI - Framework.md  74. SDI - Key-value Store.md  75. SDI - Rate Limiter.md  76. News Feed System.md  76. SDI - Real-time Gaming Leaderboard.md  83. Agentic Coding  83. Agentic Coding.md  84. MCP.md  85. LangChain.md  86. Prompt Engineering.md  87. Vector Databases.md  88. Function Calling.md  README.md
System/: 17. MapReduce.md  18. PostgreSQL Study.md  20. Client-Server Web Architecture.md  21. Socket Programming.md  23. Video Streaming.md  24. Zuul Study.md  25. Deletion in Microservices.md  26. Event-Driven Microservices.md  27. Event Streaming Platform.md  29. Columnar Data Formats.md  29. Columnar Storage Formats.md  30. Apache Arrow Study.md  (+35 more)
code-examples/langchain/: README.md  demo_concepts.py  main.py  pyproject.toml  rag_example.py
(+10 files in other folders)
