[project]
name = "langchain-proj"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "faiss-cpu>=1.12.0",
    "langchain>=1.0.0a12",
    "langchain-anthropic>=0.1.0",
    "langchain-community>=0.4",
    "langchain-huggingface>=1.0.0",
    "sentence-transformers>=5.1.1",
]
